// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Welcome should handle resign delegate dropdown action 1`] = `
<DocumentFragment>
  <h2
    class="mb-8 font-bold"
  >
    Delegate
  </h2>
  <div
    class="sc-AxirZ jhHiEf -mt-3"
    role="table"
  >
    <table
      cellpadding="0"
      class="table-auto"
    >
      <thead>
        <tr
          class="border-b border-theme-neutral-300 dark:border-theme-neutral-800"
          role="row"
        >
          <th
            class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder "
            colspan="1"
            data-testid="table__th--0"
            role="columnheader"
          >
            <div
              class="flex flex-inline align-top "
            >
              <div>
                Delegate Name
              </div>
            </div>
          </th>
          <th
            class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder "
            colspan="1"
            data-testid="table__th--1"
            role="columnheader"
          >
            <div
              class="flex flex-inline align-top justify-end"
            >
              <div>
                Rank
              </div>
            </div>
          </th>
          <th
            class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder "
            colspan="1"
            data-testid="table__th--2"
            role="columnheader"
          >
            <div
              class="flex flex-inline align-top justify-center"
            >
              <div>
                MSQ
              </div>
            </div>
          </th>
          <th
            class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder "
            colspan="1"
            data-testid="table__th--3"
            role="columnheader"
          >
            <div
              class="flex flex-inline align-top justify-center"
            >
              <div>
                Status
              </div>
            </div>
          </th>
          <th
            class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder "
            colspan="1"
            data-testid="table__th--4"
            role="columnheader"
          >
            <div
              class="flex flex-inline align-top justify-end"
            >
              <div>
                Forged Amount
              </div>
            </div>
          </th>
          <th
            class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold  "
            colspan="1"
            data-testid="table__th--5"
            role="columnheader"
          >
            <div
              class="flex flex-inline align-top justify-end no-border"
            >
              <div>
                Votes
              </div>
            </div>
          </th>
          <th
            class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder "
            colspan="1"
            data-testid="table__th--6"
            role="columnheader"
          >
            <div
              class="flex flex-inline align-top hidden"
            >
              <div>
                Actions
              </div>
            </div>
          </th>
        </tr>
      </thead>
      <tbody
        role="rowgroup"
      >
        <tr
          class="sc-AxhCb jCOJxD group"
          data-testid="TableRow"
        >
          <td>
            <div
              class="sc-AxiKw lptRhd space-x-4"
            >
              <span
                class="flex items-center -space-x-1"
                data-testid="DelegateRowItem__address"
              >
                <div
                  class="sc-AxgMl eQpXWo border-theme-neutral-800"
                >
                  <div
                    class="sc-AxjAm jmgDQY"
                    height="22"
                    width="22"
                  >
                    <svg>
                      delegate.svg
                    </svg>
                  </div>
                </div>
                <div
                  class="Avatar__AvatarWrapper-sc-1vsy2s2-0 eHceTZ"
                  data-testid="Avatar"
                >
                  <div
                    class="w-full h-full"
                  >
                    <img
                      alt="D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb"
                      src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(244, 67, 54)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"20\\" cy=\\"50\\" fill=\\"rgb(205, 220, 57)\\"/><circle r=\\"60\\" cx=\\"0\\" cy=\\"70\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"55\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/></svg>"
                      title="D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb"
                    />
                  </div>
                </div>
              </span>
              <span
                data-testid="DelegateRowItem__username"
              >
                testwallet2
              </span>
            </div>
          </td>
          <td>
            <div
              class="sc-AxiKw kzuWLv font-semibold text-theme-secondary-text justify-end"
            >
              <span
                data-testid="DelegateRowItem__rank"
              >
                #
              </span>
            </div>
          </td>
          <td>
            <div
              class="sc-AxiKw kzuWLv font-semibold justify-center text-theme-primary"
            >
              <span
                data-testid="DelegateRowItem__msq"
              >
                <div
                  class="sc-AxjAm jmgDQY"
                  height="22"
                  width="22"
                >
                  <svg>
                    msq.svg
                  </svg>
                </div>
              </span>
            </div>
          </td>
          <td>
            <div
              class="sc-AxiKw kzuWLv text-theme-neutral-light justify-center"
            >
              <span
                data-testid="DelegateRowItem__status"
              >
                <div
                  class="sc-AxjAm cpczEI text-theme-neutral"
                  height="1em"
                  width="1em"
                />
              </span>
            </div>
          </td>
          <td>
            <div
              class="sc-AxiKw kzuWLv font-semibold text-theme-secondary-text justify-end"
            >
              <span
                class="whitespace-no-wrap"
                data-testid="DelegateRowItem__forged"
              >
                2,450.643 Ѧ
              </span>
            </div>
          </td>
          <td>
            <div
              class="sc-AxiKw kzuWLv font-semibold text-theme-secondary-text justify-end"
            >
              <span
                data-testid="DelegateRowItem__votes"
              >
                <small
                  class="text-theme-neutral"
                >
                  2,43%
                </small>
                <span
                  class="ml-1 whitespace-no-wrap"
                >
                  2,450.643 Ѧ
                </span>
              </span>
            </div>
          </td>
          <td
            class="w-22"
          >
            <div
              class="sc-AxiKw jYnXjB justify-end"
            >
              <span
                data-testid="DelegateRowItem__actions"
              >
                <div
                  class="relative"
                  data-testid="dropdown__toggle"
                >
                  <button
                    class="sc-AxhUy hjyMEk"
                    type="button"
                  >
                    <div
                      class="sc-AxjAm buCJuk"
                      height="20"
                      width="20"
                    >
                      <svg>
                        settings.svg
                      </svg>
                    </div>
                  </button>
                </div>
              </span>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</DocumentFragment>
`;

exports[`Welcome should handle update delegate dropdown action 1`] = `
<DocumentFragment>
  <h2
    class="mb-8 font-bold"
  >
    Delegate
  </h2>
  <div
    class="sc-AxirZ jhHiEf -mt-3"
    role="table"
  >
    <table
      cellpadding="0"
      class="table-auto"
    >
      <thead>
        <tr
          class="border-b border-theme-neutral-300 dark:border-theme-neutral-800"
          role="row"
        >
          <th
            class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder "
            colspan="1"
            data-testid="table__th--0"
            role="columnheader"
          >
            <div
              class="flex flex-inline align-top "
            >
              <div>
                Delegate Name
              </div>
            </div>
          </th>
          <th
            class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder "
            colspan="1"
            data-testid="table__th--1"
            role="columnheader"
          >
            <div
              class="flex flex-inline align-top justify-end"
            >
              <div>
                Rank
              </div>
            </div>
          </th>
          <th
            class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder "
            colspan="1"
            data-testid="table__th--2"
            role="columnheader"
          >
            <div
              class="flex flex-inline align-top justify-center"
            >
              <div>
                MSQ
              </div>
            </div>
          </th>
          <th
            class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder "
            colspan="1"
            data-testid="table__th--3"
            role="columnheader"
          >
            <div
              class="flex flex-inline align-top justify-center"
            >
              <div>
                Status
              </div>
            </div>
          </th>
          <th
            class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder "
            colspan="1"
            data-testid="table__th--4"
            role="columnheader"
          >
            <div
              class="flex flex-inline align-top justify-end"
            >
              <div>
                Forged Amount
              </div>
            </div>
          </th>
          <th
            class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold  "
            colspan="1"
            data-testid="table__th--5"
            role="columnheader"
          >
            <div
              class="flex flex-inline align-top justify-end no-border"
            >
              <div>
                Votes
              </div>
            </div>
          </th>
          <th
            class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder "
            colspan="1"
            data-testid="table__th--6"
            role="columnheader"
          >
            <div
              class="flex flex-inline align-top hidden"
            >
              <div>
                Actions
              </div>
            </div>
          </th>
        </tr>
      </thead>
      <tbody
        role="rowgroup"
      >
        <tr
          class="sc-AxhCb jCOJxD group"
          data-testid="TableRow"
        >
          <td>
            <div
              class="sc-AxiKw lptRhd space-x-4"
            >
              <span
                class="flex items-center -space-x-1"
                data-testid="DelegateRowItem__address"
              >
                <div
                  class="sc-AxgMl eQpXWo border-theme-neutral-800"
                >
                  <div
                    class="sc-AxjAm jmgDQY"
                    height="22"
                    width="22"
                  >
                    <svg>
                      delegate.svg
                    </svg>
                  </div>
                </div>
                <div
                  class="Avatar__AvatarWrapper-sc-1vsy2s2-0 eHceTZ"
                  data-testid="Avatar"
                >
                  <div
                    class="w-full h-full"
                  >
                    <img
                      alt="D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb"
                      src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(244, 67, 54)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"20\\" cy=\\"50\\" fill=\\"rgb(205, 220, 57)\\"/><circle r=\\"60\\" cx=\\"0\\" cy=\\"70\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"55\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/></svg>"
                      title="D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb"
                    />
                  </div>
                </div>
              </span>
              <span
                data-testid="DelegateRowItem__username"
              >
                testwallet2
              </span>
            </div>
          </td>
          <td>
            <div
              class="sc-AxiKw kzuWLv font-semibold text-theme-secondary-text justify-end"
            >
              <span
                data-testid="DelegateRowItem__rank"
              >
                #
              </span>
            </div>
          </td>
          <td>
            <div
              class="sc-AxiKw kzuWLv font-semibold justify-center text-theme-primary"
            >
              <span
                data-testid="DelegateRowItem__msq"
              >
                <div
                  class="sc-AxjAm jmgDQY"
                  height="22"
                  width="22"
                >
                  <svg>
                    msq.svg
                  </svg>
                </div>
              </span>
            </div>
          </td>
          <td>
            <div
              class="sc-AxiKw kzuWLv text-theme-neutral-light justify-center"
            >
              <span
                data-testid="DelegateRowItem__status"
              >
                <div
                  class="sc-AxjAm cpczEI text-theme-neutral"
                  height="1em"
                  width="1em"
                />
              </span>
            </div>
          </td>
          <td>
            <div
              class="sc-AxiKw kzuWLv font-semibold text-theme-secondary-text justify-end"
            >
              <span
                class="whitespace-no-wrap"
                data-testid="DelegateRowItem__forged"
              >
                2,450.643 Ѧ
              </span>
            </div>
          </td>
          <td>
            <div
              class="sc-AxiKw kzuWLv font-semibold text-theme-secondary-text justify-end"
            >
              <span
                data-testid="DelegateRowItem__votes"
              >
                <small
                  class="text-theme-neutral"
                >
                  2,43%
                </small>
                <span
                  class="ml-1 whitespace-no-wrap"
                >
                  2,450.643 Ѧ
                </span>
              </span>
            </div>
          </td>
          <td
            class="w-22"
          >
            <div
              class="sc-AxiKw jYnXjB justify-end"
            >
              <span
                data-testid="DelegateRowItem__actions"
              >
                <div
                  class="relative"
                  data-testid="dropdown__toggle"
                >
                  <button
                    class="sc-AxhUy hjyMEk"
                    type="button"
                  >
                    <div
                      class="sc-AxjAm buCJuk"
                      height="20"
                      width="20"
                    >
                      <svg>
                        settings.svg
                      </svg>
                    </div>
                  </button>
                </div>
              </span>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</DocumentFragment>
`;

exports[`Welcome should render delegates 1`] = `
<DocumentFragment>
  <h2
    class="mb-8 font-bold"
  >
    Delegate
  </h2>
  <div
    class="sc-AxirZ jhHiEf -mt-3"
    role="table"
  >
    <table
      cellpadding="0"
      class="table-auto"
    >
      <thead>
        <tr
          class="border-b border-theme-neutral-300 dark:border-theme-neutral-800"
          role="row"
        >
          <th
            class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder "
            colspan="1"
            data-testid="table__th--0"
            role="columnheader"
          >
            <div
              class="flex flex-inline align-top "
            >
              <div>
                Delegate Name
              </div>
            </div>
          </th>
          <th
            class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder "
            colspan="1"
            data-testid="table__th--1"
            role="columnheader"
          >
            <div
              class="flex flex-inline align-top justify-end"
            >
              <div>
                Rank
              </div>
            </div>
          </th>
          <th
            class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder "
            colspan="1"
            data-testid="table__th--2"
            role="columnheader"
          >
            <div
              class="flex flex-inline align-top justify-center"
            >
              <div>
                MSQ
              </div>
            </div>
          </th>
          <th
            class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder "
            colspan="1"
            data-testid="table__th--3"
            role="columnheader"
          >
            <div
              class="flex flex-inline align-top justify-center"
            >
              <div>
                Status
              </div>
            </div>
          </th>
          <th
            class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder "
            colspan="1"
            data-testid="table__th--4"
            role="columnheader"
          >
            <div
              class="flex flex-inline align-top justify-end"
            >
              <div>
                Forged Amount
              </div>
            </div>
          </th>
          <th
            class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold  "
            colspan="1"
            data-testid="table__th--5"
            role="columnheader"
          >
            <div
              class="flex flex-inline align-top justify-end no-border"
            >
              <div>
                Votes
              </div>
            </div>
          </th>
          <th
            class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder "
            colspan="1"
            data-testid="table__th--6"
            role="columnheader"
          >
            <div
              class="flex flex-inline align-top hidden"
            >
              <div>
                Actions
              </div>
            </div>
          </th>
        </tr>
      </thead>
      <tbody
        role="rowgroup"
      >
        <tr
          class="sc-AxhCb jCOJxD group"
          data-testid="TableRow"
        >
          <td>
            <div
              class="sc-AxiKw lptRhd space-x-4"
            >
              <span
                class="flex items-center -space-x-1"
                data-testid="DelegateRowItem__address"
              >
                <div
                  class="sc-AxgMl eQpXWo border-theme-neutral-800"
                >
                  <div
                    class="sc-AxjAm jmgDQY"
                    height="22"
                    width="22"
                  >
                    <svg>
                      delegate.svg
                    </svg>
                  </div>
                </div>
                <div
                  class="Avatar__AvatarWrapper-sc-1vsy2s2-0 eHceTZ"
                  data-testid="Avatar"
                >
                  <div
                    class="w-full h-full"
                  >
                    <img
                      alt="D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb"
                      src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(244, 67, 54)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"20\\" cy=\\"50\\" fill=\\"rgb(205, 220, 57)\\"/><circle r=\\"60\\" cx=\\"0\\" cy=\\"70\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"55\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/></svg>"
                      title="D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb"
                    />
                  </div>
                </div>
              </span>
              <span
                data-testid="DelegateRowItem__username"
              >
                testwallet2
              </span>
            </div>
          </td>
          <td>
            <div
              class="sc-AxiKw kzuWLv font-semibold text-theme-secondary-text justify-end"
            >
              <span
                data-testid="DelegateRowItem__rank"
              >
                #
              </span>
            </div>
          </td>
          <td>
            <div
              class="sc-AxiKw kzuWLv font-semibold justify-center text-theme-primary"
            >
              <span
                data-testid="DelegateRowItem__msq"
              >
                <div
                  class="sc-AxjAm jmgDQY"
                  height="22"
                  width="22"
                >
                  <svg>
                    msq.svg
                  </svg>
                </div>
              </span>
            </div>
          </td>
          <td>
            <div
              class="sc-AxiKw kzuWLv text-theme-neutral-light justify-center"
            >
              <span
                data-testid="DelegateRowItem__status"
              >
                <div
                  class="sc-AxjAm cpczEI text-theme-neutral"
                  height="1em"
                  width="1em"
                />
              </span>
            </div>
          </td>
          <td>
            <div
              class="sc-AxiKw kzuWLv font-semibold text-theme-secondary-text justify-end"
            >
              <span
                class="whitespace-no-wrap"
                data-testid="DelegateRowItem__forged"
              >
                2,450.643 Ѧ
              </span>
            </div>
          </td>
          <td>
            <div
              class="sc-AxiKw kzuWLv font-semibold text-theme-secondary-text justify-end"
            >
              <span
                data-testid="DelegateRowItem__votes"
              >
                <small
                  class="text-theme-neutral"
                >
                  2,43%
                </small>
                <span
                  class="ml-1 whitespace-no-wrap"
                >
                  2,450.643 Ѧ
                </span>
              </span>
            </div>
          </td>
          <td
            class="w-22"
          >
            <div
              class="sc-AxiKw jYnXjB justify-end"
            >
              <span
                data-testid="DelegateRowItem__actions"
              >
                <div
                  class="relative"
                  data-testid="dropdown__toggle"
                >
                  <button
                    class="sc-AxhUy hjyMEk"
                    type="button"
                  >
                    <div
                      class="sc-AxjAm buCJuk"
                      height="20"
                      width="20"
                    >
                      <svg>
                        settings.svg
                      </svg>
                    </div>
                  </button>
                </div>
              </span>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</DocumentFragment>
`;

exports[`Welcome should render empty state 1`] = `
<DocumentFragment>
  <h2
    class="mb-8 font-bold"
  >
    Delegate
  </h2>
  <div
    class="sc-AxirZ jhHiEf -mt-3"
    role="table"
  >
    <table
      cellpadding="0"
      class="table-auto"
    >
      <thead>
        <tr
          class="border-b border-theme-neutral-300 dark:border-theme-neutral-800"
          role="row"
        >
          <th
            class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder "
            colspan="1"
            data-testid="table__th--0"
            role="columnheader"
          >
            <div
              class="flex flex-inline align-top "
            >
              <div>
                Delegate Name
              </div>
            </div>
          </th>
          <th
            class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder "
            colspan="1"
            data-testid="table__th--1"
            role="columnheader"
          >
            <div
              class="flex flex-inline align-top justify-end"
            >
              <div>
                Rank
              </div>
            </div>
          </th>
          <th
            class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder "
            colspan="1"
            data-testid="table__th--2"
            role="columnheader"
          >
            <div
              class="flex flex-inline align-top justify-center"
            >
              <div>
                MSQ
              </div>
            </div>
          </th>
          <th
            class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder "
            colspan="1"
            data-testid="table__th--3"
            role="columnheader"
          >
            <div
              class="flex flex-inline align-top justify-center"
            >
              <div>
                Status
              </div>
            </div>
          </th>
          <th
            class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder "
            colspan="1"
            data-testid="table__th--4"
            role="columnheader"
          >
            <div
              class="flex flex-inline align-top justify-end"
            >
              <div>
                Forged Amount
              </div>
            </div>
          </th>
          <th
            class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold  "
            colspan="1"
            data-testid="table__th--5"
            role="columnheader"
          >
            <div
              class="flex flex-inline align-top justify-end no-border"
            >
              <div>
                Votes
              </div>
            </div>
          </th>
          <th
            class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder "
            colspan="1"
            data-testid="table__th--6"
            role="columnheader"
          >
            <div
              class="flex flex-inline align-top hidden"
            >
              <div>
                Actions
              </div>
            </div>
          </th>
        </tr>
      </thead>
      <tbody
        role="rowgroup"
      />
    </table>
  </div>
</DocumentFragment>
`;
